  * Add python-dev, pep8 and pylint to build-depends, to be able to build
    the python module.
  * Explicitly disable Java for now.
  * debian/watch updated to pull releases from GitHub.
  * Updated the syslog-ng-core contents, to include new core modules.
  * Updated the syslog-ng-mod-geoip contents, the module has been renamed.
  * Added a new syslog-ng-mod-python package.

 -- Gergely Nagy <algernon@madhouse-project.org>  Wed, 09 Sep 2015 15:51:06 +0200

syslog-ng (3.6.1+git20141206-g4d90138-4) experimental; urgency=medium

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Run the test suite with VERBOSE=1, so we see the actual test results.
  * Add a Replaces: to syslog-ng-mod-journal, for smooth upgrades.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sat, 13 Dec 2014 14:16:59 +0100

syslog-ng (3.6.1+git20141206-g4d90138-3) experimental; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Move the systemd-journal() source to a separate package, which is
    depended on by syslog-ng-core on linux-any. This allows building the
    binaries without gross hacks on all architectures.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 07 Dec 2014 22:26:10 +0100

syslog-ng (3.6.1+git20141206-g4d90138-2) experimental; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Only force systemd on Linux, disable it everywhere else. This should
    allow syslog-ng to build again on non-linux architectures.

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 07 Dec 2014 15:39:57 +0100

syslog-ng (3.6.1+git20141206-g4d90138-1) experimental; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New snapshot release, based on upstream git commit 4d90138.

  * In scl.conf, include scl/*/*.conf, not just plugin.conf, so that all
    SCL plugins are included.
  * Use an updated systemd service file, that does not pull in
    syslog.socket (we're reading directly from the Journal, and do not