@@ -26,7 +26,8 @@ Build-Depends: debhelper (>= 9~),
                libgeoip-dev,
                libhiredis-dev,
                libriemann-client-dev (>= 1.6.0~),
-               python, python-dev, pep8, pylint
+               python, python-dev, pep8, pylint,
+               dh-exec (>= 0.13~)
 Build-Conflicts: autoconf2.13
 Standards-Version: 3.9.6
 Homepage: http://www.syslog-ng.org/
