@@ -1,3 +1,5 @@
+#! /usr/bin/dh-exec
+
 etc/syslog-ng/*
 usr/bin/*
 usr/sbin/*
@@ -27,5 +29,8 @@ usr/share/syslog-ng/xsd/*
 
 debian/syslog-ng.conf                   /etc/syslog-ng/
 debian/scl.conf                         /etc/syslog-ng/
+
+[kfreebsd-any] debian/tty10.kfreebsd.conf => /usr/share/syslog-ng/include/scl/system/tty10.conf
+[!kfreebsd-any] debian/tty10.linux.conf   => /usr/share/syslog-ng/include/scl/system/tty10.conf
 
 contrib/systemd/syslog-ng.service       /lib/systemd/system/
