@@ -12,8 +12,10 @@ syslog-ng (3.7.1-1) experimental; urgency=medium
   * Updated the syslog-ng-core contents, to include new core modules.
   * Updated the syslog-ng-mod-geoip contents, the module has been renamed.
   * Added a new syslog-ng-mod-python package.
+  * Use dh-exec to install tty10.conf, instead of doing a crazy dance in
+    debian/rules.
 
- -- Gergely Nagy <algernon@madhouse-project.org>  Wed, 09 Sep 2015 15:51:06 +0200
+ -- Gergely Nagy <algernon@madhouse-project.org>  Wed, 09 Sep 2015 16:44:34 +0200
 
 syslog-ng (3.6.1+git20141206-g4d90138-4) experimental; urgency=medium
 
